--- a/tahiti/package.json
+++ b/tahiti/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "mongodb": "^2.2.29",
     "react": "^15.6.1",
